--- a/app-config.yaml
+++ b/app-config.yaml
@@ -75,22 +75,22 @@ catalog:
     pullRequestBranchName: backstage-integration
   rules:
     - allow: [Component, System, API, Resource, Location]
-  locations:
-    # Local example data, file locations are relative to the backend process, typically `packages/backend`
-    - type: file
-      target: ../../examples/entities.yaml
+  # locations:
+  #   # Local example data, file locations are relative to the backend process, typically `packages/backend`
+  #   - type: file
+  #     target: ../../examples/entities.yaml
 
-    # Local example template
-    - type: file
-      target: ../../examples/template/template.yaml
-      rules:
-        - allow: [Template]
+  #   # Local example template
+  #   - type: file
+  #     target: ../../examples/template/template.yaml
+  #     rules:
+  #       - allow: [Template]
 
-    # Local example organizational data
-    - type: file
-      target: ../../examples/org.yaml
-      rules:
-        - allow: [User, Group]
+  #   # Local example organizational data
+  #   - type: file
+  #     target: ../../examples/org.yaml
+  #     rules:
+  #       - allow: [User, Group]
 
     ## Uncomment these lines to add more example data
     # - type: url
